Changed CMakeLists.txt file

--- a/ur5_control/CMakeLists.txt
+++ b/ur5_control/CMakeLists.txt
@@ -27,6 +27,10 @@ install(PROGRAMS
     DESTINATION lib/${PROJECT_NAME}
 )
 install(PROGRAMS
+    src/task1c.py
+    DESTINATION lib/${PROJECT_NAME}
+)
+install(PROGRAMS
     src/bonus_task2_boiler_plate.py
     DESTINATION lib/${PROJECT_NAME}
 )
