--- a/ur5_control/CMakeLists.txt
+++ b/ur5_control/CMakeLists.txt
@@ -24,6 +24,7 @@ endif()
 # Install Python scripts
 install(PROGRAMS
     src/task1b_boiler_plate.py
+    src/Task2B_aruco_perception.py
     DESTINATION lib/${PROJECT_NAME}
 )
 install(PROGRAMS
