--- a/ebot_nav/CMakeLists.txt
+++ b/ebot_nav/CMakeLists.txt
@@ -29,6 +29,7 @@ if(BUILD_TESTING)
 endif()
 
 install(PROGRAMS
+    src/shape_detect.py
     src/ebot_dwa.py
     src/main.py
     DESTINATION lib/${PROJECT_NAME}
