--- a/ebot_nav/CMakeLists.txt
+++ b/ebot_nav/CMakeLists.txt
@@ -29,8 +29,8 @@ if(BUILD_TESTING)
 endif()
 
 install(PROGRAMS
-    src/shape_detect.py
-    src/ebot_dwa.py
+    src/shape_detector_task4c.py
+    src/ebot_nav_task4c.py
     src/main.py
     DESTINATION lib/${PROJECT_NAME}
 )
