hardware files added

--- a/ebot_nav/CMakeLists.txt
+++ b/ebot_nav/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(ur5_control)
+project(ebot_nav)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -8,6 +8,13 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclpy REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -22,8 +29,10 @@ if(BUILD_TESTING)
 endif()
 
 install(PROGRAMS
-    src/perception.py
-    src/manipulation.py
+    src/shape_detector.py
+    src/ebot_nav.py
+    src/control.py
     DESTINATION lib/${PROJECT_NAME}
 )
+
 ament_package()
