added launch files

--- a/ebot_nav/CMakeLists.txt
+++ b/ebot_nav/CMakeLists.txt
@@ -34,5 +34,9 @@ install(PROGRAMS
     src/control.py
     DESTINATION lib/${PROJECT_NAME}
 )
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
 
 ament_package()
