updated task5 arm

--- a/ur5_control/CMakeLists.txt
+++ b/ur5_control/CMakeLists.txt
@@ -24,6 +24,8 @@ endif()
 install(PROGRAMS
     src/perception.py
     src/manipulation.py
+    src/joint_manipulation.py
+    src/kdl_parser_py.py
     DESTINATION lib/${PROJECT_NAME}
 )
 install(DIRECTORY
